--- a/Task1/Properties/launchSettings.json
+++ b/Task1/Properties/launchSettings.json
@@ -13,7 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+        "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7103;http://localhost:5047",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
