--- a/Task1/appsettings.json
+++ b/Task1/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Hangfire": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "HangfireConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HangfireTest;Integrated Security=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
